--- a/API/Admin/Shared/NavMenu.razor
+++ b/API/Admin/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/GetUser">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Người Dùng
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/blog">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Bài Viết
             </NavLink>
